# Hexapod

./: .gitignore  Alarm.cpp  Alarm.h  Brain.cpp  Brain.h  CMakeLists.txt  Makefile  Makefile.old  Makefile.save  ReadMe.md  WebSocketServer.cpp  WebSocketServer.h  WebSocketServer.pro  auto_make.sh  main.cpp  moc_predefs.h
WebSocketServer_autogen/: moc_predefs.h  mocs_compilation.cpp
scripts/: LCD.py  automaticMode.py  back.py  buzzer.py  distance.py  forward.py  stopBuzzer.py  stopPod.py
